--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -2,7 +2,7 @@
 <input class="search" matInput placeholder="Поиск" [(ngModel)]="emojiesService.term">
 
 <div class="">
-    <table mat-table [dataSource]="pagedEmojies" fxFlexFill  class="table">
+    <table mat-table [dataSource]="emojiesSlised" fxFlexFill  class="table">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Имя</th>
         <td mat-cell *matCellDef="let emoji">{{emoji.name}}</td>
