--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <ng-container *ngIf="!loading">
-  <div *ngIf="!loading" id="container">
+  <div id="container">
     <app-menu></app-menu>
     <router-outlet></router-outlet>    
   </div>
