--- a/src/app/components/table/table.component.sass
+++ b/src/app/components/table/table.component.sass
@@ -13,5 +13,6 @@ img.prew-img
     width: 25vw
     border-bottom: 2px solid #eeeeee
     transition: 0.3s
+    padding: 2px
     &:focus
         border-bottom: 2px solid #81a6fa
